# crm-bot

./: AGENTS.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudrun.deploy.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260518_0001_initial_schema.py  20260519_0002_campaign_default_sequence.py  20260607_0003_menu_buttons.py  20260702_0004_app_settings.py  20260703_0005_material_source.py  20260703_0006_material_fk_set_null.py  20260720_0007_broadcast_notify_chat.py
backend/app/: cli.py  config.py  logging.py  main.py  middleware.py
backend/app/db/: session.py
backend/app/models/: __init__.py  _mixins.py  admin_user.py  app_settings.py  broadcast.py  campaign.py  enums.py  event_log.py  material.py  menu_button.py  scheduled_message.py  segment.py  sequence.py  user.py
backend/app/repositories/: admin_users.py  app_settings.py  broadcasts.py  campaigns.py  events.py  materials.py  menu_buttons.py  scheduled.py  segments.py  sequences.py  users.py
backend/app/schemas/: app_settings.py  broadcast.py  campaign.py  material.py  menu_button.py  sequence.py  stats.py
backend/app/services/: automation.py  broadcast.py  scheduler.py  sender.py  stats.py
backend/tests/: conftest.py  test_admin_broadcast_flow.py  test_admin_campaigns.py  test_automation.py  test_broadcast_cleanup.py  test_broadcast_send.py  test_config.py  test_default_sequence.py  test_health.py  test_materials.py  test_models.py  test_repositories.py  test_scheduler.py  test_sender.py  test_stats.py  test_version.py  test_webhook.py
(+77 files in other folders)
